// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`clone.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
$obj2 = clone $obj1;
$obj2 = clone  $obj;
$obj2 = clone
$obj;
$obj2 = clone $veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongClass;
$obj2 = clone $this->veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLeadDeveloper;
$OneSecAgo = (clone $Now)->veryVeryVeryVeryVeryVeryVeryVeryLongMethod(new \\DateInterval("PT1S"));

=====================================output=====================================
<?php
$obj2 = clone $obj1;
$obj2 = clone $obj;
$obj2 = clone $obj;
$obj2 = clone $veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongClass;
$obj2 = clone $this->veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLeadDeveloper;
$OneSecAgo = (clone $Now)->veryVeryVeryVeryVeryVeryVeryVeryLongMethod(
    new \\DateInterval("PT1S"),
);

================================================================================
`;

exports[`single.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

clone $a;

=====================================output=====================================
<?php

clone $a;

================================================================================
`;
